<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/success"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/success"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/failed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/failed"
                    android:textSize="15sp"
                    android:layout_marginStart="30dp"/>
                <TextView
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textSize="15sp"
                    android:layout_marginStart="30dp"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/out"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/out"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|top"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:singleLine="false"
                android:text="@string/app_name"
                android:focusable="false"
                android:textSize="10sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/submit"
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/submit"
            app:icon="@drawable/ic_baseline_gavel_24"
            app:iconGravity="textStart" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>